--- a/index.html
+++ b/index.html
@@ -3,116 +3,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>AgriNexus 계약 템플릿 + 전자서명 이미지</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <title>AgriNexus 계약 업로드 + 이력 관리 + 서명 이미지</title>
   <style>
-    body { font-family: Arial; background: #f5f5f5; padding: 2rem; }
+    body { font-family: Arial; padding: 2rem; background: #f4f4f4; }
     input, textarea, select, button { width: 100%; padding: 0.8rem; margin-top: 1rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    label { margin-top: 1rem; display: block; font-weight: bold; }
-    canvas { display: block; margin-top: 1rem; border: 1px solid #ccc; }
+    h2 { color: #004b8d; margin-top: 2rem; }
+    ul { background: #fff; padding: 1rem; border-radius: 6px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    li { margin-bottom: 0.5rem; }
+    iframe { border: 1px solid #ccc; width: 100%; height: 300px; margin-top: 1rem; }
   </style>
 </head>
 <body>
-  <h1>📄 AgriNexus 계약 생성기 (템플릿 + 로고 + 서명 이미지)</h1>
+  <h1>📁 AgriNexus 계약 업로드 + 관리자 검토 시스템</h1>
 
-  <label>① 계약 템플릿 선택</label>
-  <select id="template">
-    <option value="general">일반 계약</option>
-    <option value="supply">공급 계약</option>
-    <option value="installation">설치 계약</option>
-  </select>
+  <h2>① 계약서 업로드</h2>
+  <input type="file" id="contractFile" accept="application/pdf"/>
+  <button onclick="previewFile()">👀 계약서 미리보기</button>
+  <iframe id="fileViewer"></iframe>
 
-  <label>② 계약 당사자</label>
-  <input id="partyA" placeholder="계약 당사자 A" />
-  <input id="partyB" placeholder="계약 당사자 B" />
+  <h2>② 사용자별 계약 이력 저장</h2>
+  <input type="text" id="userName" placeholder="사용자 이름" />
+  <button onclick="saveHistory()">📌 이력 저장</button>
+  <ul id="historyList"></ul>
 
-  <label>③ 계약 조건 및 내용</label>
-  <textarea id="terms" placeholder="계약 주요 내용 요약 (GPT 자동 생성됨)" rows="3"></textarea>
-
-  <label>④ 직접 입력 항목 (예: 주소, 연락처 등)</label>
-  <textarea id="custom" placeholder="직접 작성 항목 추가..." rows="2"></textarea>
-
-  <label>⑤ 특약 사항 입력</label>
-  <textarea id="clause" placeholder="특약 또는 별도 조건 입력..." rows="2"></textarea>
-
-  <label>⑥ 계약일자</label>
-  <input id="date" type="date" />
-
-  <label>⑦ 전자서명 (그림으로 그리기)</label>
-  <canvas id="signCanvas" width="300" height="100"></canvas>
-  <button onclick="clearCanvas()">🧼 서명 지우기</button>
-
-  <button onclick="generatePDF()">📥 계약서 PDF 생성</button>
+  <h2>③ 전자서명 이미지 파일 업로드</h2>
+  <input type="file" id="signatureImage" accept="image/*" />
+  <img id="signaturePreview" width="200" style="margin-top:1rem;" />
 
   <script>
-    const canvas = document.getElementById("signCanvas");
-    const ctx = canvas.getContext("2d");
-    let drawing = false;
+    function previewFile() {
+      const file = document.getElementById('contractFile').files[0];
+      if (file) {
+        const url = URL.createObjectURL(file);
+        document.getElementById('fileViewer').src = url;
+      }
+    }
 
-    canvas.onmousedown = () => drawing = true;
-    canvas.onmouseup = () => drawing = false;
-    canvas.onmousemove = e => {
-      if (!drawing) return;
-      const rect = canvas.getBoundingClientRect();
-      ctx.lineTo(e.clientX - rect.left, e.clientY - rect.top);
-      ctx.stroke();
+    function saveHistory() {
+      const name = document.getElementById('userName').value;
+      const file = document.getElementById('contractFile').files[0];
+      const signature = document.getElementById('signatureImage').files[0];
+      if (!name || !file || !signature) {
+        alert("이름, 계약서, 서명 이미지가 모두 필요합니다.");
+        return;
+      }
+      const reader = new FileReader();
+      reader.onload = function() {
+        const record = {
+          name,
+          filename: file.name,
+          signImage: reader.result,
+          time: new Date().toLocaleString()
+        };
+        let logs = JSON.parse(localStorage.getItem("contractLogs") || "[]");
+        logs.push(record);
+        localStorage.setItem("contractLogs", JSON.stringify(logs));
+        renderHistory();
+        alert("📝 계약 이력이 저장되었습니다!");
+      };
+      reader.readAsDataURL(signature);
+    }
+
+    function renderHistory() {
+      const list = document.getElementById("historyList");
+      const logs = JSON.parse(localStorage.getItem("contractLogs") || "[]");
+      list.innerHTML = "";
+      logs.forEach(log => {
+        const li = document.createElement("li");
+        li.innerHTML = `📌 [${log.time}] ${log.name} - ${log.filename}<br/>
+        <img src="${log.signImage}" width="150"/>`;
+        list.appendChild(li);
+      });
+    }
+
+    document.getElementById('signatureImage').onchange = function(e) {
+      const img = document.getElementById('signaturePreview');
+      const file = e.target.files[0];
+      if (file) {
+        const url = URL.createObjectURL(file);
+        img.src = url;
+      }
     };
 
-    function clearCanvas() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-    }
-
-    async function generatePDF() {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-
-      const template = document.getElementById("template").value;
-      const a = document.getElementById("partyA").value;
-      const b = document.getElementById("partyB").value;
-      const t = document.getElementById("terms").value;
-      const c = document.getElementById("custom").value;
-      const s = document.getElementById("clause").value;
-      const d = document.getElementById("date").value;
-
-      const templates = {
-        general: "본 계약은 다음 조건에 따라 양 당사자 간 체결됩니다.",
-        supply: "공급 계약에 따라 A는 B에게 다음 조건으로 상품 또는 서비스를 제공합니다.",
-        installation: "설치 계약에 따라 B는 A의 요청에 따라 다음 조건으로 설치를 진행합니다."
-      };
-
-      const content = `
-AgriNexus 계약서 (${template})
-
-계약일자: ${d}
-
-계약 당사자:
- - A: ${a}
- - B: ${b}
-
-[계약 내용]
-${templates[template]}
-
-${t}
-
-[직접 입력 항목]
-${c}
-
-[특약 사항]
-${s}
-
-전자서명:
-`;
-
-      doc.setFontSize(12);
-      doc.addImage('https://agrinexus.world/logo.png', 'PNG', 150, 10, 40, 20);
-      doc.text(content, 20, 40);
-
-      const imgData = canvas.toDataURL("image/png");
-      doc.addImage(imgData, 'PNG', 20, 230, 100, 30);
-
-      doc.save("AgriNexus_Contract_Templated.pdf");
-    }
+    window.onload = renderHistory;
   </script>
 </body>
 </html>
