--- a/index.html
+++ b/index.html
@@ -3,90 +3,59 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>AgriNexus 계약 업로드 + 이력 관리 + 서명 이미지</title>
+  <title>AgriNexus 서명 포함 계약 PDF 생성</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body { font-family: Arial; padding: 2rem; background: #f4f4f4; }
-    input, textarea, select, button { width: 100%; padding: 0.8rem; margin-top: 1rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
+    input, textarea, button { width: 100%; padding: 0.8rem; margin-top: 1rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
     h2 { color: #004b8d; margin-top: 2rem; }
-    ul { background: #fff; padding: 1rem; border-radius: 6px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-    li { margin-bottom: 0.5rem; }
-    iframe { border: 1px solid #ccc; width: 100%; height: 300px; margin-top: 1rem; }
+    img { margin-top: 1rem; border: 1px solid #ccc; max-width: 300px; }
   </style>
 </head>
 <body>
-  <h1>📁 AgriNexus 계약 업로드 + 관리자 검토 시스템</h1>
+  <h1>📄 AgriNexus 서명 포함 계약서 PDF 생성기</h1>
 
-  <h2>① 계약서 업로드</h2>
-  <input type="file" id="contractFile" accept="application/pdf"/>
-  <button onclick="previewFile()">👀 계약서 미리보기</button>
-  <iframe id="fileViewer"></iframe>
+  <h2>① 계약 내용 입력</h2>
+  <textarea id="contractText" rows="10" placeholder="GPT 또는 사용자가 생성한 계약 내용을 입력하세요..."></textarea>
 
-  <h2>② 사용자별 계약 이력 저장</h2>
-  <input type="text" id="userName" placeholder="사용자 이름" />
-  <button onclick="saveHistory()">📌 이력 저장</button>
-  <ul id="historyList"></ul>
+  <h2>② 서명 이미지 업로드</h2>
+  <input type="file" id="signatureImage" accept="image/*"/>
+  <img id="previewImage"/>
 
-  <h2>③ 전자서명 이미지 파일 업로드</h2>
-  <input type="file" id="signatureImage" accept="image/*" />
-  <img id="signaturePreview" width="200" style="margin-top:1rem;" />
+  <h2>③ PDF 생성 및 병합</h2>
+  <button onclick="generateSignedPDF()">📥 서명 포함 PDF 생성</button>
 
   <script>
-    function previewFile() {
-      const file = document.getElementById('contractFile').files[0];
-      if (file) {
-        const url = URL.createObjectURL(file);
-        document.getElementById('fileViewer').src = url;
-      }
-    }
+    let uploadedSignature = null;
 
-    function saveHistory() {
-      const name = document.getElementById('userName').value;
-      const file = document.getElementById('contractFile').files[0];
-      const signature = document.getElementById('signatureImage').files[0];
-      if (!name || !file || !signature) {
-        alert("이름, 계약서, 서명 이미지가 모두 필요합니다.");
-        return;
-      }
-      const reader = new FileReader();
-      reader.onload = function() {
-        const record = {
-          name,
-          filename: file.name,
-          signImage: reader.result,
-          time: new Date().toLocaleString()
-        };
-        let logs = JSON.parse(localStorage.getItem("contractLogs") || "[]");
-        logs.push(record);
-        localStorage.setItem("contractLogs", JSON.stringify(logs));
-        renderHistory();
-        alert("📝 계약 이력이 저장되었습니다!");
-      };
-      reader.readAsDataURL(signature);
-    }
-
-    function renderHistory() {
-      const list = document.getElementById("historyList");
-      const logs = JSON.parse(localStorage.getItem("contractLogs") || "[]");
-      list.innerHTML = "";
-      logs.forEach(log => {
-        const li = document.createElement("li");
-        li.innerHTML = `📌 [${log.time}] ${log.name} - ${log.filename}<br/>
-        <img src="${log.signImage}" width="150"/>`;
-        list.appendChild(li);
-      });
-    }
-
-    document.getElementById('signatureImage').onchange = function(e) {
-      const img = document.getElementById('signaturePreview');
+    document.getElementById("signatureImage").addEventListener("change", (e) => {
       const file = e.target.files[0];
       if (file) {
-        const url = URL.createObjectURL(file);
-        img.src = url;
+        const reader = new FileReader();
+        reader.onload = function(evt) {
+          uploadedSignature = evt.target.result;
+          document.getElementById("previewImage").src = uploadedSignature;
+        };
+        reader.readAsDataURL(file);
       }
-    };
+    });
 
-    window.onload = renderHistory;
+    async function generateSignedPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+
+      const text = document.getElementById("contractText").value;
+      const lines = doc.splitTextToSize(text, 180);
+      doc.text(lines, 15, 20);
+
+      if (uploadedSignature) {
+        doc.addImage(uploadedSignature, 'PNG', 15, 250, 80, 30);
+        doc.text("서명:", 15, 245);
+      }
+
+      doc.save("AgriNexus_Contract_Signed_Merged.pdf");
+    }
   </script>
 </body>
 </html>
