--- a/index.html
+++ b/index.html
@@ -3,58 +3,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>AgriNexus 서명 포함 계약 PDF 생성</title>
+  <title>AgriNexus 계약서 자동 번호 + 서버 업로드 + 이메일 전송</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
-    body { font-family: Arial; padding: 2rem; background: #f4f4f4; }
+    body { font-family: Arial; background: #f4f4f4; padding: 2rem; }
     input, textarea, button { width: 100%; padding: 0.8rem; margin-top: 1rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    h2 { color: #004b8d; margin-top: 2rem; }
-    img { margin-top: 1rem; border: 1px solid #ccc; max-width: 300px; }
+    h2 { color: #004b8d; }
   </style>
 </head>
 <body>
-  <h1>📄 AgriNexus 서명 포함 계약서 PDF 생성기</h1>
+  <h1>📤 AgriNexus 계약 자동 저장 + 이메일 전송 시스템</h1>
 
-  <h2>① 계약 내용 입력</h2>
-  <textarea id="contractText" rows="10" placeholder="GPT 또는 사용자가 생성한 계약 내용을 입력하세요..."></textarea>
+  <h2>① 계약서 내용 입력</h2>
+  <textarea id="contractText" rows="10" placeholder="계약 내용을 입력하세요..."></textarea>
+  <input type="email" id="email" placeholder="이메일 주소 입력 (계약서 전송용)" />
 
-  <h2>② 서명 이미지 업로드</h2>
-  <input type="file" id="signatureImage" accept="image/*"/>
-  <img id="previewImage"/>
-
-  <h2>③ PDF 생성 및 병합</h2>
-  <button onclick="generateSignedPDF()">📥 서명 포함 PDF 생성</button>
+  <button onclick="generateAndSend()">📤 계약서 생성 및 전송</button>
 
   <script>
-    let uploadedSignature = null;
-
-    document.getElementById("signatureImage").addEventListener("change", (e) => {
-      const file = e.target.files[0];
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function(evt) {
-          uploadedSignature = evt.target.result;
-          document.getElementById("previewImage").src = uploadedSignature;
-        };
-        reader.readAsDataURL(file);
-      }
-    });
-
-    async function generateSignedPDF() {
+    async function generateAndSend() {
       const { jsPDF } = window.jspdf;
       const doc = new jsPDF();
-
       const text = document.getElementById("contractText").value;
-      const lines = doc.splitTextToSize(text, 180);
-      doc.text(lines, 15, 20);
+      const email = document.getElementById("email").value;
+      const contractId = "AGX-" + Date.now().toString().slice(-6);
+      const encryptedNote = btoa(text);  // 단순 암호화 시뮬레이션
 
-      if (uploadedSignature) {
-        doc.addImage(uploadedSignature, 'PNG', 15, 250, 80, 30);
-        doc.text("서명:", 15, 245);
-      }
+      doc.text("AgriNexus 계약서", 20, 20);
+      doc.text("계약번호: " + contractId, 20, 30);
+      doc.text("암호화된 본문:", 20, 40);
+      const lines = doc.splitTextToSize(encryptedNote, 170);
+      doc.text(lines, 20, 50);
 
-      doc.save("AgriNexus_Contract_Signed_Merged.pdf");
+      doc.save(contractId + ".pdf");
+
+      const blob = doc.output("blob");
+      const formData = new FormData();
+      formData.append("contractFile", blob, contractId + ".pdf");
+      formData.append("email", email);
+      formData.append("contractId", contractId);
+
+      alert("📦 서버 전송 시뮬레이션: 계약번호 " + contractId + "\n(이메일 전송 및 저장 서버 필요)");
+
+      // 🔐 서버 전송 시 실제 API 연동 필요
+      /*
+      const res = await fetch("https://your-server.com/upload-contract", {
+        method: "POST",
+        body: formData
+      });
+      const result = await res.json();
+      alert("📧 이메일 전송 완료됨: " + result.status);
+      */
     }
   </script>
 </body>
