--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus Cloud Function - 재압축 버전</title>
+  <title>AgriNexus AI 플랫폼 - 시각 통합</title>
+  <style>
+    body { font-family: Arial; background: #f8f8f8; padding: 2rem; text-align: center; }
+    h1 { color: #004b8d; }
+    img { max-width: 100%; height: auto; margin: 1rem 0; border-radius: 8px; }
+    .section { background: white; border-radius: 10px; padding: 2rem; box-shadow: 0 0 10px rgba(0,0,0,0.05); margin-bottom: 2rem; }
+  </style>
 </head>
 <body>
-  <h1>📦 Firebase + 이메일 + Slack + SMS + 열람 추적</h1>
-  <p>이 파일은 자동화 통합 플랫폼의 기능 테스트용입니다.</p>
+
+  <h1>🌱 AgriNexus World - AI 기반 계약 & 물류 시스템</h1>
+
+  <div class="section">
+    <h2>1. AI 캐릭터 안내</h2>
+    <img src="ai_character.png" alt="AgriNexus AI 캐릭터">
+    <p>계약서 생성 시 사용자에게 친절한 안내를 제공하는 캐릭터입니다.</p>
+  </div>
+
+  <div class="section">
+    <h2>2. 스마트팜 글로벌 물류 지도</h2>
+    <img src="logistics_map.png" alt="AgriNexus 물류 추적 지도">
+    <p>실시간 위치 기반 물류 추적 및 스마트 계약 연동 화면에 사용됩니다.</p>
+  </div>
+
+  <div class="section">
+    <h2>3. AgriNexus 공식 로고</h2>
+    <img src="logo.png" alt="AgriNexus 로고">
+    <p>PDF 계약서 상단 및 관리자 대시보드 좌측 상단에 표시됩니다.</p>
+  </div>
+
 </body>
 </html>
