--- a/index.html
+++ b/index.html
@@ -2,36 +2,73 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>AgriNexus AI 플랫폼 - 시각 통합</title>
+  <meta charset="UTF-8">
+  <title>AgriNexus AI 계약 NFT 플랫폼</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body { font-family: Arial; background: #f8f8f8; padding: 2rem; text-align: center; }
-    h1 { color: #004b8d; }
-    img { max-width: 100%; height: auto; margin: 1rem 0; border-radius: 8px; }
-    .section { background: white; border-radius: 10px; padding: 2rem; box-shadow: 0 0 10px rgba(0,0,0,0.05); margin-bottom: 2rem; }
+    img { width: 200px; margin: 1rem auto; }
+    textarea, input, button { width: 100%; padding: 1rem; font-size: 1rem; margin: 0.5rem 0; border-radius: 6px; border: 1px solid #ccc; }
+    button { background-color: #007c4d; color: white; border: none; cursor: pointer; }
   </style>
 </head>
 <body>
 
-  <h1>🌱 AgriNexus World - AI 기반 계약 & 물류 시스템</h1>
+  <h1>📄 AgriNexus AI 계약 NFT 플랫폼</h1>
+  <img src="logo.png" alt="로고" />
+  <textarea id="contractText" rows="6" placeholder="계약서 내용을 입력하세요..."></textarea>
+  <input type="text" id="recipient" placeholder="계약서 수신자 이메일 주소" />
+  <button onclick="createPDF()">📥 계약서 PDF 생성 + NFT 카드 시각화</button>
 
-  <div class="section">
-    <h2>1. AI 캐릭터 안내</h2>
-    <img src="ai_character.png" alt="AgriNexus AI 캐릭터">
-    <p>계약서 생성 시 사용자에게 친절한 안내를 제공하는 캐릭터입니다.</p>
-  </div>
+  <div id="output" style="margin-top:2rem;"></div>
 
-  <div class="section">
-    <h2>2. 스마트팜 글로벌 물류 지도</h2>
-    <img src="logistics_map.png" alt="AgriNexus 물류 추적 지도">
-    <p>실시간 위치 기반 물류 추적 및 스마트 계약 연동 화면에 사용됩니다.</p>
-  </div>
+  <script>
+    const { jsPDF } = window.jspdf;
 
-  <div class="section">
-    <h2>3. AgriNexus 공식 로고</h2>
-    <img src="logo.png" alt="AgriNexus 로고">
-    <p>PDF 계약서 상단 및 관리자 대시보드 좌측 상단에 표시됩니다.</p>
-  </div>
+    async function createPDF() {
+      const text = document.getElementById("contractText").value;
+      const recipient = document.getElementById("recipient").value;
+      const doc = new jsPDF();
+
+      // 로고
+      const logoImg = new Image();
+      logoImg.src = "logo.png";
+
+      // 캐릭터
+      const charImg = new Image();
+      charImg.src = "ai_character.png";
+
+      logoImg.onload = () => {
+        doc.addImage(logoImg, "PNG", 150, 10, 40, 20);
+        charImg.onload = () => {
+          doc.addImage(charImg, "PNG", 10, 260, 30, 30);
+          doc.setFontSize(12);
+          doc.text("AgriNexus 계약서", 20, 30);
+          doc.text(`수신자: ${recipient}`, 20, 40);
+          const lines = doc.splitTextToSize(text, 170);
+          doc.text(lines, 20, 50);
+          doc.save("AgriNexus_Contract_with_Logo.pdf");
+        };
+      };
+
+      // NFT 시각화 카드
+      const nftCard = `
+        <div style="border:2px solid #007c4d; padding:1rem; background:#fff; border-radius:10px; max-width:400px; margin:1rem auto;">
+          <img src="ai_character.png" style="width:80px;"><br/>
+          <strong>📄 계약 NFT</strong><br/>
+          수신자: ${recipient}<br/>
+          고유번호: AGX-${Date.now().toString().slice(-6)}<br/>
+          <small>시각화 전용 카드로 블록체인 발행 가능</small>
+        </div>
+      `;
+      document.getElementById("output").innerHTML = nftCard;
+
+      // 캐릭터 음성 출력
+      const voice = new SpeechSynthesisUtterance(`AgriNexus 계약서가 생성되었습니다. 수신자는 ${recipient}입니다.`);
+      voice.lang = "ko-KR";
+      speechSynthesis.speak(voice);
+    }
+  </script>
 
 </body>
 </html>
