--- a/index.html
+++ b/index.html
@@ -2,86 +2,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>AgriNexus NFT + IPFS + TTS + UI</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <meta charset="UTF-8" />
+  <title>AgriNexus NFT + Pinata + Design</title>
   <style>
-    body { font-family: Arial; padding: 2rem; background: #eef2f3; text-align: center; }
+    body { font-family: Arial; padding: 2rem; background: #f2f7f5; text-align: center; }
     textarea, input, button { width: 100%; padding: 1rem; margin-top: 0.5rem; border-radius: 6px; border: 1px solid #ccc; font-size: 1rem; }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    #nftCard { margin-top: 2rem; background: white; padding: 1rem; border-radius: 10px; max-width: 400px; margin: 2rem auto; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    img { width: 80px; }
+    .nft-card {
+      margin-top: 2rem;
+      background: #fff;
+      border-radius: 12px;
+      padding: 1.5rem;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+    }
+    .nft-card img { width: 100px; margin-bottom: 1rem; }
+    .nft-card h3 { margin: 0.5rem 0; color: #007c4d; }
   </style>
 </head>
 <body>
 
-  <h1>🪙 AgriNexus NFT 계약서 발행 플랫폼</h1>
+  <h1>🌍 AgriNexus NFT 발행 플랫폼 (IPFS + 디자인)</h1>
 
-  <textarea id="contractText" rows="5" placeholder="계약 내용을 입력하세요..."></textarea>
-  <input id="walletAddress" placeholder="Polygon Testnet 지갑 주소 (0x...)" />
-  <button onclick="mintNFT()">NFT 발행 + IPFS 업로드</button>
-  <button onclick="speak()">🎧 TTS로 계약 안내 듣기</button>
+  <textarea id="contractText" rows="5" placeholder="NFT 계약 내용을 입력하세요..."></textarea>
+  <input id="name" placeholder="NFT 이름" />
+  <button onclick="uploadToIPFS()">📤 Pinata에 업로드</button>
 
-  <div id="nftCard"></div>
+  <div id="nftCard" class="nft-card" style="display:none;">
+    <img src="ai_character.png" alt="AI 캐릭터" />
+    <h3 id="nftName"></h3>
+    <p id="nftDesc"></p>
+    <p><small id="ipfsUrl"></small></p>
+  </div>
 
   <script>
-    async function mintNFT() {
-      const contractText = document.getElementById("contractText").value;
-      const wallet = document.getElementById("walletAddress").value;
-      const contractId = "AGX-" + Date.now().toString().slice(-6);
+    async function uploadToIPFS() {
+      const name = document.getElementById("name").value;
+      const desc = document.getElementById("contractText").value;
+      const nftCard = document.getElementById("nftCard");
+      const nftName = document.getElementById("nftName");
+      const nftDesc = document.getElementById("nftDesc");
+      const ipfsUrl = document.getElementById("ipfsUrl");
 
-      // 1. 메타데이터 생성
       const metadata = {
-        name: "AgriNexus Contract " + contractId,
-        description: contractText,
-        image: "https://gateway.pinata.cloud/ipfs/QmExampleCID",  // 실제 CID로 대체
+        name: name,
+        description: desc,
+        image: "https://gateway.pinata.cloud/ipfs/QmExampleCID"
       };
 
-      // 2. IPFS 업로드 (시뮬레이션)
-      const ipfsUrl = "https://gateway.pinata.cloud/ipfs/QmFakeMetaCID"; // 대체 가능
+      nftName.textContent = metadata.name;
+      nftDesc.textContent = metadata.description;
+      ipfsUrl.textContent = "https://gateway.pinata.cloud/ipfs/QmFakeMetaCID";
+      nftCard.style.display = "block";
 
-      // 3. NFT 카드 시각화
-      document.getElementById("nftCard").innerHTML = `
-        <div>
-          <img src="ai_character.png" />
-          <h3>📜 NFT 계약카드</h3>
-          <p><strong>${metadata.name}</strong></p>
-          <p>지갑: ${wallet}</p>
-          <p><small>IPFS: ${ipfsUrl}</small></p>
-        </div>
-      `;
-
-      // 4. Polygon Testnet NFT 발행 (시뮬레이션)
-      if (window.ethereum) {
-        const web3 = new Web3(window.ethereum);
-        await ethereum.request({ method: "eth_requestAccounts" });
-        const accounts = await web3.eth.getAccounts();
-        const from = accounts[0];
-
-        const contract = new web3.eth.Contract(
-          [{"inputs":[{"internalType":"string","name":"uri","type":"string"},{"internalType":"address","name":"to","type":"address"}],"name":"mintNFT","outputs":[],"stateMutability":"nonpayable","type":"function"}],
-          "YOUR_POLYGON_TESTNET_CONTRACT_ADDRESS"
-        );
-
-        try {
-          await contract.methods.mintNFT(ipfsUrl, wallet).send({ from });
-          alert("✅ NFT 발행 성공 (Polygon Testnet)");
-        } catch (e) {
-          console.error(e);
-          alert("❌ NFT 발행 실패");
-        }
-      } else {
-        alert("MetaMask가 필요합니다!");
-      }
-    }
-
-    function speak() {
-      const contract = document.getElementById("contractText").value;
-      const voice = new SpeechSynthesisUtterance(contract);
-      voice.lang = "ko-KR";
-      voice.rate = 1;
-      voice.pitch = 1;
-      speechSynthesis.speak(voice);
+      // 실제 Pinata 업로드 예시 (서버 또는 API Key 필요)
+      /*
+      const res = await fetch("https://api.pinata.cloud/pinning/pinJSONToIPFS", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "Authorization": "Bearer YOUR_PINATA_JWT"
+        },
+        body: JSON.stringify(metadata)
+      });
+      const data = await res.json();
+      ipfsUrl.textContent = "https://gateway.pinata.cloud/ipfs/" + data.IpfsHash;
+      */
     }
   </script>
 
