--- a/index.html
+++ b/index.html
@@ -3,73 +3,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus NFT + Pinata + Design</title>
+  <title>AgriNexus NFT Platform - Final Deployment</title>
   <style>
-    body { font-family: Arial; padding: 2rem; background: #f2f7f5; text-align: center; }
-    textarea, input, button { width: 100%; padding: 1rem; margin-top: 0.5rem; border-radius: 6px; border: 1px solid #ccc; font-size: 1rem; }
-    button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    .nft-card {
+    body { font-family: Arial, background: #f0f5f9; padding: 2rem; text-align: center; }
+    textarea, input, button { width: 100%; padding: 1rem; margin-top: 0.5rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; }
+    button { background-color: #007c4d; color: white; border: none; cursor: pointer; }
+    .card {
       margin-top: 2rem;
-      background: #fff;
-      border-radius: 12px;
       padding: 1.5rem;
+      border-radius: 12px;
       max-width: 400px;
       margin-left: auto;
       margin-right: auto;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+      background: rgba(255, 255, 255, 0.9);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-    .nft-card img { width: 100px; margin-bottom: 1rem; }
-    .nft-card h3 { margin: 0.5rem 0; color: #007c4d; }
+    .card img {
+      width: 80px;
+      border-radius: 50%;
+    }
   </style>
 </head>
 <body>
 
-  <h1>🌍 AgriNexus NFT 발행 플랫폼 (IPFS + 디자인)</h1>
+  <h1>🌿 AgriNexus NFT 계약 플랫폼 (Remix + Pinata + Design)</h1>
 
-  <textarea id="contractText" rows="5" placeholder="NFT 계약 내용을 입력하세요..."></textarea>
-  <input id="name" placeholder="NFT 이름" />
-  <button onclick="uploadToIPFS()">📤 Pinata에 업로드</button>
+  <textarea id="desc" rows="4" placeholder="NFT 설명을 입력하세요..."></textarea>
+  <input id="nftName" placeholder="NFT 이름" />
+  <input id="wallet" placeholder="수신자 지갑 주소 (0x...)" />
+  <button onclick="showCard()">NFT 카드 생성</button>
 
-  <div id="nftCard" class="nft-card" style="display:none;">
-    <img src="ai_character.png" alt="AI 캐릭터" />
-    <h3 id="nftName"></h3>
-    <p id="nftDesc"></p>
-    <p><small id="ipfsUrl"></small></p>
+  <div class="card" id="nftCard" style="display:none;">
+    <img src="ai_character.png" />
+    <h3 id="title"></h3>
+    <p id="description"></p>
+    <small>Wallet: <span id="walletOut"></span></small><br/>
+    <small>IPFS: <span id="ipfsOut">https://gateway.pinata.cloud/ipfs/QmExample</span></small>
   </div>
 
   <script>
-    async function uploadToIPFS() {
-      const name = document.getElementById("name").value;
-      const desc = document.getElementById("contractText").value;
-      const nftCard = document.getElementById("nftCard");
-      const nftName = document.getElementById("nftName");
-      const nftDesc = document.getElementById("nftDesc");
-      const ipfsUrl = document.getElementById("ipfsUrl");
+    function showCard() {
+      const title = document.getElementById("nftName").value;
+      const desc = document.getElementById("desc").value;
+      const wallet = document.getElementById("wallet").value;
 
-      const metadata = {
-        name: name,
-        description: desc,
-        image: "https://gateway.pinata.cloud/ipfs/QmExampleCID"
-      };
-
-      nftName.textContent = metadata.name;
-      nftDesc.textContent = metadata.description;
-      ipfsUrl.textContent = "https://gateway.pinata.cloud/ipfs/QmFakeMetaCID";
-      nftCard.style.display = "block";
-
-      // 실제 Pinata 업로드 예시 (서버 또는 API Key 필요)
-      /*
-      const res = await fetch("https://api.pinata.cloud/pinning/pinJSONToIPFS", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer YOUR_PINATA_JWT"
-        },
-        body: JSON.stringify(metadata)
-      });
-      const data = await res.json();
-      ipfsUrl.textContent = "https://gateway.pinata.cloud/ipfs/" + data.IpfsHash;
-      */
+      document.getElementById("title").textContent = title;
+      document.getElementById("description").textContent = desc;
+      document.getElementById("walletOut").textContent = wallet;
+      document.getElementById("nftCard").style.display = "block";
     }
   </script>
 
